--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Acme&family=Architects+Daughter&family=IBM+Plex+Sans+Thai+Looped&family=Indie+Flower&family=Josefin+Sans&family=Jost&family=League+Spartan:wght@300&family=Redressed&family=Roboto:wght@300&family=Satisfy&family=Source+Sans+Pro&family=Unna&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Indie+Flower&family=Josefin+Sans&family=Jost&family=League+Spartan:wght@300&family=Redressed&family=Roboto:wght@300&family=Satisfy&family=Source+Sans+Pro&family=Unna&display=swap');
 
 * {
     margin: 0;
     padding: 0;
 }
 
-/* ------------------------------------------------------------ Home CSS ------------------------------------------------------------------------------- */
+/* ---------------------------------------------------- Home CSS ------------------------------------------------------------------ */
 
 #Home {
     padding-top: 3rem;
@@ -47,20 +48,7 @@
     font-size: 80px;
 }
 
-#additionalDiv {
-    height: 100vh;
-}
-
-/* #Home{
-    margin-bottom: 1rem;
-} */
-
-/* ---------------------------------------------------------------- About CSS ---------------------------------------------------------------------- */
- 
-/* aboutme.css */
-
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Indie+Flower&family=Josefin+Sans&family=Jost&family=League+Spartan:wght@300&family=Redressed&family=Roboto:wght@300&family=Satisfy&family=Source+Sans+Pro&family=Unna&display=swap');
-
+/* -------------------------------------------------------- About CSS -------------------------------------------------------------- */
 #About{
     padding-top: 2rem;
 }
@@ -103,10 +91,7 @@ tr:nth-child(even){
     background-color: #fbd2ff70;
 }
 
-/* ---------------------------------------------------------------- Project CSS ---------------------------------------------------------------------- */
-/* .pbody {
-    height: 86.4vh;
-} */
+/* -------------------------------------------------------- Project CSS ---------------------------------------------------------- */
 #Project{
     padding-top: 4rem;
 }
@@ -141,10 +126,9 @@ tr:nth-child(even){
 }
 .prh1 {
     text-align: center;
-    text-decoration: underline;
 }
-
 .goBtn {
+    font-family: 'Source Sans Pro', sans-serif;
     float: right;
     text-decoration: none;
     border: 1px solid #000000;
@@ -155,7 +139,6 @@ tr:nth-child(even){
     animation: changeColor 1s infinite;
     transition: 0.2s ease-in all;
 }
-
 @keyframes changeColor {
     0% {
         border: 1px solid #ff0000;
@@ -251,7 +234,7 @@ tr:nth-child(even){
     margin: 0;
 }
 
-/* ---------------------------------------------------------------- Contact Us CSS ---------------------------------------------------------------------- */
+/* -------------------------------------------------------- Contact Us CSS ------------------------------------------------------------ */
 #ContactUs{
     padding: 2rem 0;
     min-height: 90vh;
@@ -276,14 +259,14 @@ label {
     font-size: 18px;
     padding: 0 0 3px 3px;
     justify-content: left;
-    font-family: 'Source Sans Pro', sans-serif;
+    /* font-family: 'Source Sans Pro', sans-serif; */
 }
 .mb-3{
     border-bottom: 2px solid #838fa9;
 }
 .cusInp {
     background: transparent;
-    font-family: 'Source Sans Pro', sans-serif;
+    /* font-family: 'Source Sans Pro', sans-serif; */
     border: none !important;
     outline: none !important;
     width: 100%;
@@ -294,7 +277,7 @@ textarea {
 }
 
 #subBtnn {
-    font-family: 'Source Sans Pro', sans-serif;
+    /* font-family: 'Source Sans Pro', sans-serif; */
     width: 100%;
     border: none;
     outline: none;
@@ -313,17 +296,20 @@ textarea {
     box-shadow: 1px 1px 5px #00000093;
 }
 
-/* ---------------------------------------------------------------- Common CSS ------------------------------------------------------------------- */
+/* --------------------------------------------------------- Common CSS -------------------------------------------------------------- */
 body {
     margin: 0px;
     padding: 0px;
     background-color: rgb(243, 239, 232);
-    font-family: 'Acme', sans-serif;
+    font-family: 'League Spartan', sans-serif;
     scroll-behavior: smooth;
     overflow-x: hidden;
     user-select: none;
 }
-
+a{
+    text-decoration: none;
+    cursor: pointer;
+}
 .navbar-1 {
     font-family: 'Acme', sans-serif;
     z-index: 5;
@@ -372,13 +358,15 @@ body {
 }
 
 #navbar-1 li a:hover {
-    border-bottom: 3px solid rgb(138, 136, 136);
+    padding: 12px 12px;
+    border-bottom: 2px solid rgb(138, 136, 136);
 }
 
 .active-1 {
     color: #000000 !important;
     border-bottom: 3px solid #000000 !important;
     font-size: 18px;
+    padding: 11px 12px !important;
 }
 
 .icons-1 {
@@ -423,8 +411,38 @@ footer {
     font-family: 'IBM Plex Sans Thai Looped', sans-serif;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0 0 0 / 69%);
+    background-color: #000000b0;
     color: white;
 }
-
-/* -------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* -----------------------------------------------------feedback--------------------------------------------------- */
+.thx4urfdbk{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1000;
+    transform: translate(-50%, -50%);
+    background-color: #3b7c7c;
+    color: white;
+    padding: 2rem 5rem 1.3rem 5rem;
+    animation: show 1s linear 1;
+    display: none;
+    border-radius: 1rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+@keyframes show {
+    0%{top: 0;}
+    30%{top: 60%;}
+    42%{top: 40%;}
+    60%{top: 55%;}
+    80%{top: 45%;}
+    100%{top: 50%;}
+}
+.tfyf{
+    height: 20vh;
+    width: 20vh;
+    border: 4px solid white;
+    border-radius: 50rem;
+    margin-bottom: 2rem;
+}
