--- a/src/App.css
+++ b/src/App.css
@@ -297,6 +297,21 @@ textarea {
 }
 
 /* --------------------------------------------------------- Common CSS -------------------------------------------------------------- */
+.preloader{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    height: 100vh;
+    width: 100vw;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.preloaderGif{
+    height: 40vh;
+}
 body {
     margin: 0px;
     padding: 0px;
@@ -305,6 +320,9 @@ body {
     scroll-behavior: smooth;
     overflow-x: hidden;
     user-select: none;
+}
+::-webkit-scrollbar {
+    width: 0px;
 }
 a{
     text-decoration: none;
