--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -106,8 +106,10 @@
         max-width: 95vw;
     }
 
-    /* -------------------------------------------------------- Common CSS ----------------------------------------------------------- */
-
+    /* -------------------------------------------------- Common CSS -------------------------------------------------------- */
+    .preloader{
+        display: none !important;
+    }
     .preloaderGif {
         height: 30vh;
     }
