--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,7 @@ textarea {
     box-shadow: 1px 1px 5px #00000093;
 }
 
-/* --------------------------------------------------------- Common CSS -------------------------------------------------------------- */
+/* --------------------------------------------------------- Common CSS ------------------------------------------------------ */
 .preloader{
     position: fixed;
     top: 0;
@@ -369,6 +369,7 @@ footer {
     color: white;
 }
 /* -----------------------------------------------------contact message--------------------------------------------------- */
+
 .thx4urfdbk{
     position: fixed;
     top: 50%;
@@ -401,4 +402,7 @@ footer {
     border: 4px solid white;
     border-radius: 50rem;
     margin-bottom: 2rem;
+}
+.thx4urfdbk h2, .thx4urfdbk p{
+    text-align: center;
 }
