--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -105,6 +105,9 @@
         min-height: 0vh;
         max-width: 95vw;
     }
+    textarea {
+        height: 30vh;
+    }
 
     /* -------------------------------------------------- Common CSS -------------------------------------------------------- */
     .preloader{
@@ -124,10 +127,36 @@
     }
 
     #navbar-1 ul {
-        display: none;
+        display: flex;
+        justify-content: space-evenly;
+        width: 100vw;
+        box-sizing: border-box;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        background-color: #e2e2e2;
+        box-shadow: -3px 0 3px #000000b7;
+    }
+    #navbar-1 ul li{
+        width: 25vw;
+        height: 12vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #000000 !important;
+        transition: all 1s ease !important;
+    }
+
+    .active-1 {
+        position: relative;
+        /* bottom: 12vw; */
+        border-bottom: none !important;
+        font-size: 18px;
+        padding: 11px 12px !important;
     }
     footer {
         font-size: .7rem;
+        margin-bottom: 12vw;
     }
 
     /* -----------------------------------------------------contact message--------------------------------------------------- */
@@ -183,8 +212,8 @@
     }
 
     .tfyf {
-        height: 20vh;
-        width: 20vh;
+        height: 15vh;
+        width: 15vh;
         border: 4px solid white;
         border-radius: 50rem;
         margin-bottom: 2rem;
