--- a/src/components/navigationBar/style.css
+++ b/src/components/navigationBar/style.css
@@ -5,20 +5,21 @@
   right: 0;
   top: 0;
   background-color: #fff;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.411);
+  box-shadow: 2px 2px 2px #00000069;
   display: flex;
   justify-content: end;
   z-index: -1;
 }
 .navbar span{
   cursor: pointer;
+  color: #3b7c7c;
   font-size: 1.2rem;
 }
 .logo{
   border-radius: 50px;
   height: 50px;
   width: auto;
-  border: 2px solid #000000b0;
+  border: 2px solid #3b7c7c;
   margin: 0 1rem;
   cursor: pointer;
 }
