--- a/src/components/navigationBar/style.css
+++ b/src/components/navigationBar/style.css
@@ -8,7 +8,8 @@
   box-shadow: 2px 2px 2px #00000069;
   display: flex;
   justify-content: end;
-  z-index: -1;
+  transition: all .3s;
+  z-index: 2;
 }
 .navbar span{
   cursor: pointer;
