--- a/src/components/sideBar/style.css
+++ b/src/components/sideBar/style.css
@@ -22,6 +22,4 @@
   background-color: #fff;
   z-index: 10;
 }
-.ant-menu-item-selected{
-  /* background-color: #000 !important; */
-}
+/* .ant-menu-item-selected */
