--- a/src/components/homE/style.css
+++ b/src/components/homE/style.css
@@ -3,6 +3,7 @@
   position: relative;
   padding: 5rem 1rem 1rem 1rem;
   transition: all .3s;
+  box-shadow: 2px 2px 2px #00000083;
 }
 .featured{
   background: url('../../img/dfe.jpg');
