--- a/src/components/navigationBar/style.css
+++ b/src/components/navigationBar/style.css
@@ -16,11 +16,40 @@
   color: #3b7c7c;
   font-size: 1.2rem;
 }
-.logo{
-  border-radius: 50px;
+.logo, .profilePic{
+  border-radius: 50rem;
   height: 50px;
   width: auto;
   border: 2px solid #3b7c7c;
   margin: 0 1rem;
   cursor: pointer;
+}
+.profileModel{
+  width: 40vw !important;
+}
+.profileModel h4{
+  color: #3b7c7c;
+  margin: 1rem 0;
+}
+.info{
+  text-align: left;
+  letter-spacing: 1px;
+}
+.profileModel p{
+  font-size: 1rem;
+  margin: 0;
+  color: #8b8b8b;
+}
+.profileModel .ant-modal-content{
+  display: flex;
+  justify-content: center;
+  padding: 3rem;
+  text-align: center;
+  width: 40vw !important;
+}
+.ant-modal-footer{
+  display: none !important;
+}
+.profilePic{
+  height: 150px;
 }
