--- a/src/components/navigationBar/style.css
+++ b/src/components/navigationBar/style.css
@@ -29,16 +29,11 @@
 }
 .profileModel h4{
   color: #3b7c7c;
-  margin: 1rem 0;
+  margin: 1rem 0 2rem 0;
 }
 .info{
   text-align: left;
   letter-spacing: 1px;
-}
-.profileModel p{
-  font-size: 1rem;
-  margin: 0;
-  color: #8b8b8b;
 }
 .profileModel .ant-modal-content{
   display: flex;
@@ -51,5 +46,11 @@
   display: none !important;
 }
 .profilePic{
-  height: 150px;
+  height: 140px;
+}
+.info tr, .info td,  .info table{
+  background-color: #fff;
+  border: none !important;
+  padding: .3rem 1rem;
+  font-size: 1rem;
 }
