--- a/src/components/footeR/style.css
+++ b/src/components/footeR/style.css
@@ -25,3 +25,21 @@
 .links{
   margin: 1rem 0;
 }
+
+@media screen and (max-width: 550px) {
+  .footer{
+    padding: 1rem;
+    left: 0 !important;
+    width: 100vw !important;
+    height: 20rem !important;
+    flex-direction: column;
+  }
+  .social{
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    padding: 1rem 0 0 0;
+  }
+  .social h5{
+    margin: 0;
+  }
+}
