--- a/src/components/navigationBar/style.css
+++ b/src/components/navigationBar/style.css
@@ -54,3 +54,11 @@
   padding: .3rem 1rem;
   font-size: 1rem;
 }
+@media screen and (max-width: 550px) {
+  #navbar{
+    width: 100vw !important;
+    left: 0 !important;
+    justify-content: start;
+    flex-direction: row-reverse;
+  }
+}
