--- a/src/components/projectS/style.css
+++ b/src/components/projectS/style.css
@@ -47,3 +47,37 @@
   color: #3b7c7c;
   background-color: #fff;
 }
+@media screen and (max-width: 550px) {
+  #projects{
+    width: 100vw !important;
+    left: 0 !important;
+    padding: 1rem;
+  }
+  .prCardBody{
+    width: 95%;
+    margin: 1rem auto;
+  }
+  .prCard{
+    border-radius: 1rem;
+    height: 25vh;
+    width: 88vw;
+    right: 0 !important;
+  }
+  .prCard p{
+    font-size: .8rem !important;
+    width: 40vw !important;
+  }
+  #nChatLogo {
+    height: 6rem;
+  }
+  .mph1 {
+    font-size: 1.3rem;
+    margin: 0;
+  }
+  .goBtn {
+    border-radius: 1rem;
+    padding: .2rem .5rem;
+    font-size: .9rem;
+    margin: 1rem 0;
+  }
+}
