--- a/src/components/sideBar/style.css
+++ b/src/components/sideBar/style.css
@@ -22,4 +22,9 @@
   background-color: #fff;
   z-index: 10;
 }
-/* .ant-menu-item-selected */
+
+@media screen and (max-width: 550px) {
+  .sidebar{
+    display: none;
+  }
+}
