--- a/src/components/skillS/style.css
+++ b/src/components/skillS/style.css
@@ -12,6 +12,13 @@ h3{
   margin: 2rem;
   text-decoration: underline;
 }
+.progress{
+  width: 250px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .skillItem{
   justify-content: space-around;
   margin: 2.7rem 0;
@@ -58,4 +65,54 @@ h3{
   font-size: 1rem !important;
   font-weight: bolder;
   margin: 0 1rem 0 0;
+}
+@media screen and (max-width: 550px) {
+  .skills{
+    width: 100vw !important;
+    left: 0 !important;
+    padding: 1rem;
+  }
+  .progress{
+    width: 120px;
+    height: 120px;
+  }
+  h1{
+    margin-bottom: 1rem;
+  }
+  h3{
+    margin: .4rem;
+    font-size: 1.3rem;
+  }
+  .skillItem{
+    margin: 1rem 0;
+  }
+  .skill span{
+    margin: .2rem .6rem 0 0;
+    font-size: .9rem;
+  }
+  .skill img{
+    height: 15px;
+    width: auto;
+  }
+  .cv{
+    border-radius: .5rem;
+    margin: 1rem 0;
+  }
+  .cv ion-icon{
+    margin: 0;
+    font-size: 1.7rem;
+  }
+  .cv .name{
+    margin: .5rem;
+    font-size: 1.1rem;
+    height: 1.5rem;
+    padding: 0 .5rem;
+  }
+  .download{
+    right: .5rem;
+    font-size: 1rem !important;
+  }
+  .download a{
+    margin: .3rem;
+  }
 }
