ready to deploy

--- a/src/components/navigationBar/style.css
+++ b/src/components/navigationBar/style.css
@@ -25,6 +25,7 @@
   cursor: pointer;
 }
 .profileModel{
+  font-family: 'League Spartan', sans-serif;
   width: 40vw !important;
 }
 .profileModel h4{
