--- a/src/components/skillS/style.css
+++ b/src/components/skillS/style.css
@@ -76,6 +76,9 @@ h3{
     width: 120px;
     height: 120px;
   }
+  .skillLogo{
+    margin: 0 .3rem !important;
+  }
   h1{
     margin-bottom: 1rem;
   }
